@@ -1,2 +1,2 @@
-VERSION=7.12.3
+VERSION=7.12.4
 YEARS=1992-2009
