@@ -3,7 +3,6 @@
 int main(int argc, char **argv)
 try
 {
-    return 0;
 }
 catch (...)
 {
